[package]
authors = ["Ade m Ramdani <ramdanhere04@gmail.com>"]
name = "gloves"
license = "gpl-3.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clap = { version = "3.0.10", features = ["derive"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
